tests/snapshots/drift_autofix_snapshot_tests__drift_case_state_file_out_of_sync.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_db_instance.main",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "allocated_storage": 20,
          "instance_class": "db.t3.small"
        },
        "before": {
          "allocated_storage": 20,
          "instance_class": "db.t3.micro"
        }
      },
      "mode": "managed",
      "name": "main",
      "type": "aws_db_instance"
    }
  ]
}
