tests/snapshots/drift_autofix_snapshot_tests__drift_case_tainted_resource.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.tainted",
      "change": {
        "actions": [
          "delete",
          "create"
        ],
        "after": {
          "instance_type": "t3.medium"
        },
        "before": {
          "instance_type": "t3.medium"
        }
      },
      "mode": "managed",
      "name": "tainted",
      "type": "aws_instance"
    }
  ]
}
